feature: final test

--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,5 @@ CANISTER_ID_BACKEND='uxrrr-q7777-77774-qaaaq-cai'
 CANISTER_ID='uxrrr-q7777-77774-qaaaq-cai'
 CANISTER_CANDID_PATH='/Users/bag-yeonha/MyProjects/hackathon/motiv/backend/backend.did'
 # END DFX CANISTER ENVIRONMENT VARIABLES
+
+GEMINI_API_KEY=AIzaSyBJ8wT0EsU1THPryM2jKb0rb-eVyBa0NA0
